# cheetah-2017

./: .dir-locals.el  .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  Makefile  README.md  Readme  XtcRun.cc  build-all  build-all-nomod  build-libcheetah  build-psana  cheetah.cpp  cheetah.ini  cheetah_install.txt  comp  compileme  crystfinder  cspad-cryst.ini  cspad_cleaner.cc  cspad_cryst.cc  cspad_cryst.cpp  cspad_geometry.pro  data2d.cpp  data2d.h  index.html  main.cc  main.hh  median.cpp  median.h  myana_cspad.cc  myana_monitors.cc  myana_morefeatures.cc  myana_v2.tar  mycomp  params.json  peakfinders.cpp  peakfinders.h  release_v2.tar  (+10 more)
cheetah_ana_mod/: CMakeLists.txt
cheetah_ana_pkg/: CMakeLists.txt
cheetah_ana_pkg/doc/: README
cheetah_ana_pkg/examples/: psana.cfg
cheetah_ana_pkg/src/: cheetah_ana_mod.cpp
cheetah_myana/: CMakeLists.txt
cheetah_myana/src/: cheetah-myana.cpp
libcheetah/: CMakeLists.txt
libcheetah/include/: cheetah.h  cheetahEvent.h  cheetahGlobal.h  cheetahmodules.h  detectorObject.h  hitfinders.h  peakfinders.h  saveCXI.h
libcheetah/src/: assemble2DImage.cpp  backgroundCorrection.cpp  detectorCorrection.cpp  detectorObject.cpp  hitfinders.cpp  libcheetah.cpp  peakfinders.cpp  powder.cpp  radialAverage.cpp  saveCXI.cpp  saveFrame.cpp  setup.cpp  worker.cpp
psana/: CMakeLists.txt
source/: CMakeLists.txt  CxiDs1.ini  Doxyfile  Makefile  backgroundCorrection.cpp  cheetah-myana.cpp  cheetah.cpp  cheetah.ini  cheetahEvent.h  cheetahGlobal.h  data2d.cpp  detectorClass.cpp  detectorCorrection.cpp  detectorObject.cpp  detectorObject.h  hitfinders.cpp  hitfinders.h  libcheetah.cpp  pixelDetector.cpp  pixelDetector.h  powder.cpp  radialAverage.cpp  saveFrame.cpp  setup.cpp  setup.h  upload  utils.h  worker.cpp  worker.h
source/.mdep22554/: a
source/cheetah-ab.xcodeproj/: project.pbxproj
source/cheetah-cbf/: CMakeLists.txt  main-cbf.cpp
source/cheetah-sacla/: CMakeLists.txt  cheetah_sacla.1  main-sacla-hdf5.cpp  sacla-hdf5-reader.cpp  sacla-hdf5-reader.h
source/cheetah.lib/: DetectorStruct.h  GetSnabshot.h  assemble2DImage.cpp  backgroundCorrection.cpp  cheetah.h  cheetahEvent.h  cheetahGlobal.h  cheetahmodules.h  createHid_t.cpp  createHid_t.h  cxiPara.h  detectorCorrection.cpp  detectorObject.cpp  detectorObject.h  hitfinders.cpp  hitfinders.h  libcheetah.cpp  peakfinders.h  powder.cpp  radialAverage.cpp  saveCXI.cpp  saveCXI.h  saveCxi.cpp  saveCxi.h  saveFrame.cpp  setup.cpp  setup.h  spectrum.cpp  staticPara.cpp  staticPara.h  worker.cpp  worker.h
source/cheetah.xcodeproj/: barty.mode1v3  barty.mode2v3  barty.pbxuser  project.pbxproj
source/cheetah.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
source/cheetah_ana_pkg/: CMakeLists.txt
source/cheetah_ana_pkg/examples/: psana.1.cfg
source/cheetah_ana_pkg/include/: cheetah_ana_mod.h
source/cheetah_ana_pkg/src/: cheetah_ana_mod.cpp  event_copy.cpp
source/cheetah_myana/: CMakeLists.txt
source/cheetah_myana/doc/: Readme
source/cheetah_myana/examples/: run-cheetah-myana
source/cheetah_myana/src/: cheetah-myana.cpp
source/cmake/Modules/: FindFFTW.cmake  FindMYANA.cmake  FindPSANA.cmake
source/lcls-myana/: Readme
source/lcls-myana/myana/: acqiris_reorder.cc  comp  myana.hh
source/lcls-psana/: .pkg_tree.pkl  .sit_release  README  SConstruct  myPsana  psana.cfg
source/lcls-psana/cheetah_ana_pkg/: SConscript
source/lcls-psana/chuck_ana_pkg/: SConscript  SConscript~
source/lcls-psana/data/: ImgAlgos
source/lcls-psana/include/: ImgAlgos  cheetah_ana_pkg  chuck_ana_pkg
source/lcls-psana/psana/: SConscript
source/lcls-psana/psana_examples/: SConscript
source/lcls-psana/xtcProofReaderPkg/: SConscript
source/lcls.new/myana/: .#main.cc.1.68  comp  main.cc  main.hh  myana  myana.cc  myana_morefeatures  myana_morefeatures.cc
source/lcls/cspad/: CspadCorrector.cc  CspadGeometry.hh  Notes.rtf
source/lcls/myana/: History  SplitEventQ.cc  XtcRun.cc  XtcRun.cc.notused  XtcRun.hh  comp  comp.pnccd  comp.pnccd~  e113-r0057-s02-c00.root  main.cc  main.hh  myana  myana.cc  myana_morefeatures  myana_morefeatures.cc
source/lcls/myana.2012jun20/: .#main.cc.1.72  .#main.cc.1.73  SplitEventQ.hh  XtcRun.hh.notused  main.cc  main_old.hh  oldvermain.cc  pnccdPedestalCalculator
source/libPSShmemInput/: CMakeLists.txt
source/libXtcInput/: CMakeLists.txt
source/libXtcInput/include/: RunFileIterLive.h  StreamFileIterLive.h
source/libXtcInput/src/: DgramReader.cpp  RunFileIterLive.cpp  StreamFileIterLive.cpp
source/libcheetah/: CMakeLists.txt
source/libcheetah/include/: cheetah.h  cheetahEvent.h  cheetahGlobal.h  cheetahmodules.h  data2d.h  dataVersion.h  detectorObject.h  frameBuffer.h  hitfinders.h  median.h  peakDetect.h  peakfinders.h  processRateMonitor.h  saveCXI.h  tofDetector.h  util.h
source/libcheetah/src/: angularCorrelation.cpp  assemble2DImage.cpp  autocorrelation.cpp  backgroundCorrection.cpp  correlation.cpp  data2d.cpp  dataVersion.cpp  detectorCorrection.cpp  detectorObject.cpp  downsample.cpp  event.cpp  frameBuffer.cpp  global.cpp  gmd.cpp  histogram.cpp  hitfinders.cpp  integratePattern.cpp  libcheetah.cpp  log.cpp  median.cpp  modularDetector.cpp  peakDetect.cpp  peakfinders.cpp  pixelmask.cpp  polarMaping.cpp  powder.cpp  processRateMonitor.cpp  radialAverage.cpp  saveCXI.cpp  saveFrame.cpp  setup.cpp  spectrum.cpp  streakFinderWrapperWrapper.cpp  timetool.cpp  tofDetector.cpp  worker.cpp
source/libcheetah/tools/: dump-all-keywords  dump-detector-keywords  dump-global-keywords
source/libpsana/: CMakeLists.txt
source/libpsana/include/: EventLoop.h  InputIter.h  Module.h
source/libpsana/src/: EventLoop.cpp
source/myana/: XtcRun.cc.250511  myana.cc  myana_morefeatures.cc
source/psana/: CMakeLists.txt
source/psana/include/: cheetah-psana.h
source/psana/src/: cheetah-psana.cpp
source/release/: projects.mk
source/release/ami/: History
source/release/pdsdata/: History
source/release/pgpcard/: PgpCardMod.h
tests/: CMakeLists.txt  gtest_basic.cpp  psana_basic.py
tests/valgrind/: supressions.txt
(+2231 files in other folders)
