
find_package(HDF5 REQUIRED)

file(GLOB sources "src/*.cpp")

INCLUDE_DIRECTORIES("include")

ADD_LIBRARY(cheetah SHARED ${sources})

TARGET_LINK_LIBRARIES(cheetah ${HDF5_LIBRARIES})

set_target_properties(
 cheetah
 PROPERTIES SOVERSION 1
 VERSION 1
 INSTALL_NAME_DIR ${CMAKE_INSTALL_PREFIX}/lib
)

INSTALL(TARGETS cheetah
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)