
FIND_PACKAGE(PSANA REQUIRED)

FIND_PACKAGE(HDF5 REQUIRED)


LIST(APPEND SOURCES "src/cheetah_ana_mod.cpp")

ADD_DEFINITIONS(-DCHEETAH_SIT_DATA="${ANA_SIT_DATA}")

INCLUDE_DIRECTORIES("include")
INCLUDE_DIRECTORIES(${PSANA_INCLUDES})
INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})

ADD_LIBRARY(cheetah_ana_pkg SHARED ${SOURCES})

ADD_DEPENDENCIES(cheetah_ana_pkg cheetah)

TARGET_LINK_LIBRARIES(cheetah_ana_pkg ${PSANA_LIBRARIES} cheetah )


SET_TARGET_PROPERTIES(
 cheetah_ana_pkg
 PROPERTIES SOVERSION 1
 VERSION 1
)

INSTALL(TARGETS cheetah_ana_pkg
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX})
