
FIND_PACKAGE(MYANA REQUIRED)

LIST(APPEND SOURCES "src/cheetah-myana.cpp" "src/myana/main.cc")

INCLUDE_DIRECTORIES("include")
INCLUDE_DIRECTORIES(${PSANA_INCLUDES})
INCLUDE_DIRECTORIES(${MYANA_INCLUDES})

ADD_EXECUTABLE(cheetah_myana ${SOURCES})

ADD_DEPENDENCIES(cheetah_myana cheetah)

TARGET_LINK_LIBRARIES(cheetah_myana ${MYANA_LIBRARIES} cheetah )

INSTALL(TARGETS cheetah_myana
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX})
